--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -195,19 +195,13 @@
                         </constraints>
                     </view>
                     <toolbarItems>
-                        <barButtonItem systemItem="action" id="ahp-uA-wQq"/>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="k5h-BZ-rVo"/>
-                        <barButtonItem title="Edit Trip" id="ooy-aN-Dgr">
-                            <connections>
-                                <segue destination="gg5-cy-vzQ" kind="show" identifier="EditTrip" id="jZf-ad-41L"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="mBE-Fu-7Iv"/>
                         <barButtonItem image="Google Maps-50" id="7F0-pC-zy0">
                             <connections>
                                 <segue destination="RbZ-n7-ryc" kind="show" identifier="ViewMap" id="ta9-se-2tD"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="mBE-Fu-7Iv"/>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Journal Entries" id="YcF-mY-hIn">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="G8D-Dr-3ze">
@@ -498,7 +492,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="weU-06-GHG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Journal Entries" image="note-write-7" id="acW-dT-cKf"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sXf-de-ijy">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="sXf-de-ijy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -584,28 +578,17 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vpz-J5-MRL">
-                                <rect key="frame" x="82" y="424" width="211" height="44"/>
-                                <color key="backgroundColor" red="0.86295402489999995" green="0.60227042740000003" blue="0.63134195010000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="Delete Trip">
-                                    <color key="titleColor" red="1" green="0.041046944600000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Rz4-2M-ssO" firstAttribute="leading" secondItem="SEf-DE-p2P" secondAttribute="leadingMargin" constant="30" id="0KO-kE-mvn"/>
                             <constraint firstItem="Olt-mw-5pc" firstAttribute="top" secondItem="Rz4-2M-ssO" secondAttribute="bottom" constant="39" id="1Fc-QD-qbQ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Vpz-J5-MRL" secondAttribute="trailing" constant="66" id="6gK-9V-bDg"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Rz4-2M-ssO" secondAttribute="trailing" constant="30" id="ABa-iA-DUQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Olt-mw-5pc" secondAttribute="trailing" constant="30" id="C2L-l5-FLq"/>
                             <constraint firstItem="cc0-Rp-o2p" firstAttribute="top" secondItem="Olt-mw-5pc" secondAttribute="bottom" constant="39" id="JKX-7c-Rx0"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cc0-Rp-o2p" secondAttribute="trailing" constant="30" id="XGr-Wo-aNy"/>
                             <constraint firstItem="Rz4-2M-ssO" firstAttribute="top" secondItem="uX0-nx-cXO" secondAttribute="bottom" constant="39" id="o9b-yP-rVS"/>
                             <constraint firstItem="cc0-Rp-o2p" firstAttribute="leading" secondItem="SEf-DE-p2P" secondAttribute="leadingMargin" constant="30" id="r46-4e-FTF"/>
-                            <constraint firstItem="Vpz-J5-MRL" firstAttribute="leading" secondItem="SEf-DE-p2P" secondAttribute="leadingMargin" constant="66" id="vL5-5K-fHZ"/>
-                            <constraint firstItem="kPZ-14-iYd" firstAttribute="top" secondItem="Vpz-J5-MRL" secondAttribute="bottom" constant="150" id="vjU-DL-exL"/>
                             <constraint firstItem="Olt-mw-5pc" firstAttribute="leading" secondItem="SEf-DE-p2P" secondAttribute="leadingMargin" constant="30" id="wmW-Re-zKp"/>
                         </constraints>
                     </view>
@@ -622,7 +605,6 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="deleteButton" destination="Vpz-J5-MRL" id="NvL-Us-wKf"/>
                         <outlet property="enddatefield" destination="L3V-IN-Eqz" id="JeT-CX-dpp"/>
                         <outlet property="navigationBar" destination="hoU-vy-Vrr" id="xa0-Re-znY"/>
                         <outlet property="saveButton" destination="knN-sF-rD7" id="qSU-ZE-t5d"/>
@@ -767,7 +749,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gn5-d1-5bN" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Trips" image="earth-america-7" id="mRj-g3-65c"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SkW-eI-q9c">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="SkW-eI-q9c">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -790,8 +772,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Dnh-YK-hGp"/>
-        <segue reference="ztw-0l-fIw"/>
-        <segue reference="dCT-tE-Y8K"/>
         <segue reference="qgu-Bx-CKy"/>
+        <segue reference="dCT-tE-Y8K"/>
     </inferredMetricsTieBreakers>
 </document>
